--- a/exposure/templates/exposure.html
+++ b/exposure/templates/exposure.html
@@ -158,7 +158,7 @@
     <div class="container glow-on-hover">
       <div>
         <h4>
-          Depois de dar um passeio por nossos membros, oque acha agora de conhcer
+          Depois de dar um passeio por nossos membros, oque acha agora de conhecer os nossos serviços? <a href="#">Clique aqui!!!</a>
         </h4>
       </div>
     </div>
